@@ -7,6 +7,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****  Fix real parameters causing bad module names, bug992. [Johan Bjork]
 
+****  Fix size-changing cast on packed struct, bug993. [Johan Bjork]
+
 
 * Verilator 3.878 2015-11-01
 
